--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<h1>Hurray !!, Our first component</h1>
+<h4>Hurray !!, Our first server - {{getServerName()}} with ID - {{serverId}} is running</h4>
