--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,3 @@
 <app-server></app-server>
-<app-server></app-server>
+
+<button [disabled]="disableButton" class="btn btn-primary">Start Server</button>
