--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,5 @@
 <app-server></app-server>
+<app-server></app-server>
 <!-- One way data binding -->
 <!-- <input type="text" class="form-control" (input)="onInputChange($event)" /> -->
 
