--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -24,6 +24,7 @@
       </p>
     </ng-template>
 
-    <app-server *ngFor="let server of servers" ></app-server>
+    <!-- <app-server *ngFor="let server of servers;" ></app-server> -->
+    <div *ngFor="let server of servers; let i = index" >Certain name {{i}}</div>
   </div>
 </div>
